<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">

        <menu>

            <item
                android:id="@+id/menuPerfil"
                android:icon="@drawable/profile"
                android:title="@string/perfil" />

            <item
                android:id="@+id/menuHorario"
                android:icon="@drawable/horario"
                android:title="@string/horario" />

            <item
                android:id="@+id/menuExamenes"
                android:icon="@drawable/examenes"
                android:title="@string/examenes" />



            <item
                android:id="@+id/menuCalendario"
                android:icon="@drawable/calendario"
                android:title="@string/calendario" />

            <item
                android:id="@+id/menuAjustes"
                android:icon="@drawable/settings"
                android:title="@string/ajustes" />

            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/about"
                android:title="@string/sobre_nosotros" />

        </menu>

    </item>

    <item
        android:id="@+id/cerrarSesion"
        android:icon="@drawable/logout"
        android:title="@string/cerrar_sesion" />
</menu>