<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"

    android:gravity="center|top"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/underControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/bad_script"
        android:gravity="center"
        android:shadowColor="#67787E"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/tittle_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FAF4F4"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:text="Iniciar Sesión" />

    <EditText
        android:id="@+id/email"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_below="@id/underControl"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:autofillHints="email"
        android:background="#8FD8EBF4"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        tools:text="@string/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="70dp"
        android:autofillHints="password"
        android:background="#8FD8EBF4"
        android:editable="true"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="Contraseña"
        android:textColor="#67787E"
        android:textColorHighlight="#DAC4C4"
        android:textSize="24sp"
        tools:text="password" />

    <Button
        android:id="@+id/login"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="20dp"
        android:background="@color/teal_700"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:enabled="false"
        app:backgroundTint="#67787E" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignBottom="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="-60dp"
        android:gravity="center"
        android:text="Registrarme"
        android:textColor="#67787E"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/restableceContraseña"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/signUpButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:gravity="center_horizontal"
        android:text="Restablecer contraseña?"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />


</RelativeLayout>